# graphtoolbox

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/source/: conf.py  index.rst
docs/source/_autosummary/: graphtoolbox.data.builder.rst  graphtoolbox.data.dataset.rst  graphtoolbox.data.preprocessing.rst  graphtoolbox.data.rst  graphtoolbox.interpretability.explain.rst  graphtoolbox.interpretability.rst  graphtoolbox.models.gnn.rst  graphtoolbox.models.rst  graphtoolbox.optim.optimizer.rst  graphtoolbox.optim.rst  graphtoolbox.rst  graphtoolbox.training.metrics.rst  graphtoolbox.training.rst  graphtoolbox.training.trainer.rst  graphtoolbox.utils.GL_3SR.rst  graphtoolbox.utils.attention.rst  graphtoolbox.utils.helper_functions.rst  graphtoolbox.utils.rst  (+1 more)
examples/load/: example.ipynb
examples/netload/: config.py  example.ipynb  example_data1825.ipynb
graphtoolbox/: __init__.py  _lazy.py
graphtoolbox/aggregation/: __init__.py  aggregation.py
graphtoolbox/data/: __init__.py  builder.py  dataset.py  preprocessing.py
graphtoolbox/evaluation/: __init__.py  significance.py
graphtoolbox/interpretability/: __init__.py  explain.py
graphtoolbox/models/: __init__.py  gnn.py  temporal.py
graphtoolbox/optim/: optimizer.py
graphtoolbox/training/: __init__.py  trainer.py
graphtoolbox/utils/: __init__.py  attention.py  visualizations.py
tests/: test_aggregation.py  test_extra_models.py  test_helpers.py  test_import.py  test_integration_pipeline.py  test_interpretability.py  test_metrics.py  test_models.py  test_optimizer.py  test_significance.py  test_temporal.py
(+6 files in other folders)
